# airflow_sandbox

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  test.py  test2.py
dags/: dag_with_minio_s3.py  dag_with_postgres_hook.py  dag_with_postgres_operator.py  dag_with_taskflow_api.py  dependency_dag.py  our_first_dag.py  welcome_dag.py
data/: data_for_minio.csv
tools/: csv_loader.py
